# dataset-builder

./: .cursorrules  .gitignore  LICENSE  README.md  pyrightconfig.json
DataHarvester/: .env.example  README.md  directory_tree.md  pyproject.toml
DataHarvester/compose/: .dockerignore  .env.example  docker-compose.yml
DataHarvester/services/batch_processor/: Dockerfile.celery  directory_tree.md  pyproject.toml
DataHarvester/services/batch_processor/infrastructure/redis/: __init__.py  config.py  consumer.py  producer.py
DataHarvester/services/batch_processor/pipeline_worker/: base.py  celery_config.py  registry.py  schemas.py  tasks.py  validators.py
DataHarvester/services/data_ingestion/: Dockerfile.DI  directory_tree.md
DataHarvester/services/data_ingestion/application/services/text/: text_cleaner_service.py
DataHarvester/services/data_ingestion/application/services/transcript/: transcript_processor.py  transcript_service.py
DataHarvester/services/data_ingestion/domain/exceptions/: domain_exceptions.py
DataHarvester/services/data_ingestion/domain/models/: transcript.py
DataHarvester/services/data_ingestion/infrastructure/config/: config_manager.py
DataHarvester/services/data_ingestion/infrastructure/error_handling/handlers/: error_handler.py
DataHarvester/services/data_ingestion/infrastructure/error_handling/middleware/: error_middleware.py
DataHarvester/services/data_ingestion/infrastructure/mongodb/: mongo_repository.py
DataHarvester/services/data_ingestion/infrastructure/monitoring/: health_checker.py
DataHarvester/services/data_ingestion/presentation/cli/: main.py
DataHarvester/services/data_ingestion/validation/validators/: scraping_validator.py
DataHarvester/services/data_transformation/: Dockerfile.DT  __init__.py  pyproject.toml
DataHarvester/services/data_transformation/src/domain/: models.py
DataHarvester/services/data_transformation/src/domain/interfaces/: schema.py
DataHarvester/services/data_transformation/src/infrastructure/mongodb/: factory.py  repository.py
DataHarvester/services/data_transformation/src/infrastructure/tasks/: task.py
DataHarvester/services/data_transformation/src/interfaces/utils/: event_factory.py
DataHarvester/services/data_transformation/src/services/: llm.py  llm_factory.py  prompt_loader.py  validate.py
DataHarvester/services/database/: directory_tree.md  init_mongo.py  pyproject.toml
DataHarvester/services/mongo_service/: Dockerfile.MongoDB  directory_tree.md  init_mongo.py  mongod.conf  pyproject.toml
DataHarvester/services/mongo_service/infrastructure/redis/: consumer.py
DataHarvester/services/scraper_service/: Dockerfile.DI  directory_tree.md  pyproject.toml
DataHarvester/services/scraper_service/application/services/text/: nlp_service.py  text_cleaner_service.py
DataHarvester/services/scraper_service/application/services/transcript/: transcript_processor.py  transcript_service.py
DataHarvester/services/scraper_service/domain/exceptions/: domain_exceptions.py
DataHarvester/services/scraper_service/domain/models/: transcript.py
DataHarvester/services/scraper_service/infrastructure/config/: config_manager.py
DataHarvester/services/scraper_service/infrastructure/error_handling/: error_registry.py
DataHarvester/services/scraper_service/infrastructure/error_handling/exceptions/: base.py  specific.py
DataHarvester/services/scraper_service/infrastructure/error_handling/handlers/: error_handler.py
DataHarvester/services/scraper_service/infrastructure/error_handling/middleware/: error_middleware.py
DataHarvester/services/scraper_service/infrastructure/error_handling/utils/: text_utils.py  time_utils.py
DataHarvester/services/scraper_service/infrastructure/logging/: logger.py
DataHarvester/services/scraper_service/infrastructure/monitoring/: health_checker.py
DataHarvester/services/scraper_service/infrastructure/redis/: config.py  producer.py
DataHarvester/services/scraper_service/presentation/cli/: cli_handler.py
DataHarvester/services/scraper_service/tests/infrastructure/redis/: test_producer.py
DataHarvester/services/scraper_service/tests/integration/: test_redis_integration.py
DataHarvester/services/scraper_service/validation/rules/: validation_rules.py
DataHarvester/services/scraper_service/validation/validators/: base_validator.py  config_validator.py  database_validator.py  scraping_validator.py  youtube_validator.py
DataHarvester/services/shared/: directory_tree.md  pyproject.toml
DataHarvester/services/shared/src/dataharvester_shared/: __init__.py  schemas.py
DataHarvester/services/shared/src/dataharvester_shared/config/: celery_config.py  settings.py
DataHarvester/services/shared/src/dataharvester_shared/interfaces/: __init__.py
DataHarvester/services/shared/src/dataharvester_shared/models/: task.py
DataHarvester/services/shared/src/dataharvester_shared/mongodb/: models.py
DataHarvester/services/transformer_service/: Dockerfile.DT  directory_tree.md  pyproject.toml
DataHarvester/services/transformer_service/src/domain/: __init__.py  models.py
DataHarvester/services/transformer_service/src/services/: llm.py  llm_factory.py  prompt_loader.py  validate.py
DataHarvester/services/worker/: Dockerfile.celery  pyproject.toml
DataHarvester/services/worker/pipeline_worker/: __init__.py  base.py  celery_config.py  registry.py  validators.py
Notes/: 01-24-25.md  batch-processor-to-do.md  jan13-notes.md  (+4 more)
Software/DataHarvester/services/api/: Dockerfile.api  directory_tree.md  pyproject.toml
Software/DataHarvester/services/api/app/: dependencies.py  endpoints.py  main.py  schemas.py  start.sh
Software/DataHarvester/services/data_ingestion/: Dockerfile.DI  __init__.py  directory_tree.md  pyproject.toml  setup.py
Software/DataHarvester/services/data_transformation/: directory_tree.md  pyproject.toml
(+161 files in other folders)
