# Software/DataHarvester/pyproject.toml

[project]
requires-python = "==3.12.8"

[tool.black]
line-length = 135
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 135

[tool.mypy]
python_version = "3.12.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.poetry]
name = "dataharvester"
version = "1.0.0"
description = "YouTube Subtitle Data Harvester"
authors = ["Jay-Alexander Elliot <11063158@uvu.edu>"]

[tool.poetry.dependencies]
python = "==3.12.8"
celery = "^5.3.6"
redis = "^5.0.1" 