# Software/DataHarvester/services/shared/pyproject.toml

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataharvester-shared"
version = "0.1.0"
description = "Shared utilities for DataHarvester services"
requires-python = "==3.12.8"
dependencies = [
    "pydantic>=2.0.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "pydantic-settings>=2.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dataharvester_shared"]

[tool.black]
line-length = 135
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 135

[tool.mypy]
python_version = "3.12.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 